Refactored, cleaned directory and added packaging

--- a/src/notebooks/extract.ipynb
+++ b/src/notebooks/extract.ipynb
@@ -16,20 +16,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys  \n",
+    "sys.path.insert(1, '../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Process ID: 5124\n"
+     ]
+    }
+   ],
+   "source": [
     "import logging\n",
+    "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "from src.extract.imap.imap_extractor import IMAPExtractor\n",
-    "from src.extract.pst.pst_extractor import PSTExtractor\n",
+    "from src.extract.imap_extractor import IMAPExtractor\n",
+    "from src.extract.pst_extractor import PSTExtractor\n",
     "from src.transform.message_transformer import get_language, get_response_time, clean_text\n",
     "\n",
-    "logging.basicConfig(level=logging.INFO)"
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "print(f\"Process ID: {os.getpid()}\")"
    ]
   },
   {
@@ -48,17 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Opening ./data/raw/emails.pst for extraction\n",
+      "INFO:root:Opening data/raw/emails.pst for extraction\n",
       "INFO:root:Found 5039 messages in total\n",
       "INFO:root:Parsing messages\n",
-      "INFO:root:Filling missing data\n",
+      "INFO:root:Using 8 processes with a chunk size of 629\n",
+      "100%|██████████| 5039/5039 [00:30<00:00, 164.83it/s]\n",
       "INFO:root:Parsing email threading\n",
       "INFO:root:Parsing domain info\n",
       "INFO:root:Extracting missing email ids\n",
@@ -67,7 +89,8 @@
     }
    ],
    "source": [
-    "pst_extractor = PSTExtractor(\"./data/raw/emails.pst\")\n",
+    "pst_path = os.path.normpath(\"./data/raw/emails.pst\")\n",
+    "pst_extractor = PSTExtractor(pst_path)\n",
     "pst_message_df = pst_extractor.message_df"
    ]
   },
@@ -80,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +401,7 @@
        "      <td>ubc.ca</td>\n",
        "      <td>gmail.com, ubc.ca</td>\n",
        "      <td>False</td>\n",
-       "      <td>Belal, here are your latest...</td>\n",
+       "      <td>Belal, here are your latest job matches! Don'...</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
@@ -402,7 +425,7 @@
        "      <td>uber.com</td>\n",
        "      <td>gmail.com, uber.com</td>\n",
        "      <td>False</td>\n",
-       "      <td>Total QA...</td>\n",
+       "      <td>Total QAR 12.93June 30, 2024 Thanks for ridin...</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
@@ -450,7 +473,7 @@
        "      <td>uber.com</td>\n",
        "      <td>gmail.com, uber.com</td>\n",
        "      <td>False</td>\n",
-       "      <td>Total QA...</td>\n",
+       "      <td>Total QAR 15.93June 30, 2024 Thanks for ridin...</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
@@ -498,7 +521,7 @@
        "      <td>amazon.ca</td>\n",
        "      <td>amazon.ca, gmail.com</td>\n",
        "      <td>False</td>\n",
-       "      <td>Get excited. Deals are coming.͏ ‌   ­͏ ‌   ­͏ ...</td>\n",
+       "      <td>Get excited. Deals are coming.͏ ‌ ­͏ ‌ ­͏ ‌ ­͏...</td>\n",
        "      <td>None</td>\n",
        "      <td>am</td>\n",
        "    </tr>\n",
@@ -522,7 +545,7 @@
        "      <td>uber.com</td>\n",
        "      <td>gmail.com, uber.com</td>\n",
        "      <td>False</td>\n",
-       "      <td>Total QA...</td>\n",
+       "      <td>Total QAR 26.24July 1, 2024 Thanks for riding...</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
@@ -570,7 +593,7 @@
        "      <td>ooredoo.qa</td>\n",
        "      <td>gmail.com, ooredoo.qa</td>\n",
        "      <td>False</td>\n",
-       "      <td>Hi Belal Mohammed Nur,  You’ve succes...</td>\n",
+       "      <td>Hi Belal Mohammed Nur, You’ve successfully lo...</td>\n",
        "      <td>None</td>\n",
        "      <td>en</td>\n",
        "    </tr>\n",
@@ -702,21 +725,22 @@
        "\n",
        "                                          clean_text response_time language  \n",
        "0                                          Reminder!          None       en  \n",
-       "1                     Belal, here are your latest...          None       en  \n",
-       "2                                        Total QA...          None       en  \n",
+       "1   Belal, here are your latest job matches! Don'...          None       en  \n",
+       "2   Total QAR 12.93June 30, 2024 Thanks for ridin...          None       en  \n",
        "3  #### Belal Mohammed Nur, payment has been proc...          None       en  \n",
-       "4                                        Total QA...          None       en  \n",
+       "4   Total QAR 15.93June 30, 2024 Thanks for ridin...          None       en  \n",
        "5  #### Belal Mohammed Nur, payment has been proc...          None       en  \n",
-       "6  Get excited. Deals are coming.͏ ‌   ­͏ ‌   ­͏ ...          None       am  \n",
-       "7                                        Total QA...          None       en  \n",
+       "6  Get excited. Deals are coming.͏ ‌ ­͏ ‌ ­͏ ‌ ­͏...          None       am  \n",
+       "7   Total QAR 26.24July 1, 2024 Thanks for riding...          None       en  \n",
        "8  #### Belal Mohammed Nur, payment has been proc...          None       en  \n",
-       "9           Hi Belal Mohammed Nur,  You’ve succes...          None       en  \n",
+       "9   Hi Belal Mohammed Nur, You’ve successfully lo...          None       en  \n",
        "\n",
        "[10 rows x 24 columns]"
       ]
      },
+     "execution_count": 14,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -726,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +765,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   }
  },
