--- a/src/notebooks/extract.ipynb
+++ b/src/notebooks/extract.ipynb
@@ -40,6 +40,7 @@
    "source": [
     "import logging\n",
     "import os\n",
+    "import glob\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
