Updated NER with Regex based extraction

--- a/src/notebooks/transform.ipynb
+++ b/src/notebooks/transform.ipynb
@@ -576,7 +576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "entities_df = extract_entities_from_messages(message_df, llm_invoker)\n",
+    "entities_df = extract_entities_from_messages(message_df, llm_invoker, use_regex=True)\n",
     "checkpointer.save(\"entities\", entities_df)"
    ]
   },
